invoicesrpc+lnrpc: add msat fields to invoices
