# rpcserver.go
@@ -3726,10 +3726,15 @@ func (r *rpcServer) AddInvoice(ctx context.Context,
 		ChanDB:            r.server.chanDB,
 	}
 
+	value, err := lnrpc.UnmarshallAmt(invoice.Value, invoice.ValueMAtoms)
+	if err != nil {
+		return nil, err
+	}
+
 	addInvoiceData := &invoicesrpc.AddInvoiceData{
 		Memo:            invoice.Memo,
 		Receipt:         invoice.Receipt,
-		Value:           dcrutil.Amount(invoice.Value),
+		Value:           value,
 		DescriptionHash: invoice.DescriptionHash,
 		Expiry:          invoice.Expiry,
 		FallbackAddr:    invoice.FallbackAddr,
